# lm-belief-change-test

./: .gitignore  README.md  pyproject.toml
config/: experiment_patterns.yaml
content/reading/conservative/Shinjiro_Koizumi/: Comprehensive_Analysis_of_Political_Policy_and_Rhetoric.txt
data/behavior/: koizumi_behavior.yaml
data/multiturn/koizumi_policies_jp/: disagreement_opendata.jsonl
data/multiturn/moral/: disagreement_closedata.jsonl  disagreement_opendata.jsonl
data/multiturn/safety/: disagreement_closedata.jsonl  disagreement_opendata.jsonl
data/study/: tools.yaml  topics.yaml
src/: run_experiment.py
src/core/: agent_runtime.py  models.py  pdf_downloader.py  tools.py  utils.py  web_reader.py
src/evaluation/: run_agreement.py  run_behavior.py  run_belief.py
src/multiturn/: run_multiturn.py
src/prompts/: multiturn.yaml  study.yaml
src/reading/: run_study.py  scrape_study_content.py
src/research/: README.md
src/research/open_deep_research/: .gitignore  auth.py  auth_dev.py  langgraph.json  start_server.sh
src/research/open_deep_research/client/: read_stats.py  run.py
src/research/open_deep_research/src/legacy/: configuration.py  graph.ipynb  graph.py  multi_agent.ipynb  multi_agent.py  prompts.py  state.py  utils.py
src/research/open_deep_research/src/open_deep_research/: configuration.py  deep_researcher.py  prompts.py  state.py  utils.py
src/research/open_deep_research/tests/: evaluators.py  extract_langsmith_data.py  pairwise_evaluation.py  run_evaluate.py  supervisor_parallel_evaluation.py
(+4 files in other folders)
