[project]
name = "project"
version = "0.1.0"
requires-python = ">=3.10,<3.13"
dependencies = [
    "anthropic~=0.42.0",
    "fire~=0.6.0",
    "google-generativeai~=0.8.3",
    "openai~=1.59.0",
    "python-dotenv~=1.0.1",
    "pyyaml~=6.0.2",
    "rich~=13.9.4",
    "tqdm~=4.66.5",
]

[tool.uv]
default-groups = "all"

[tool.uv.sources]

[dependency-groups]
dev = [
    "mypy~=1.15.0",
    "ruff~=0.11.2",
    "pytest~=8.4.1",
    "pytest-cov~=6.2.1",
    "pytest-mock~=3.12.0",
]
jupyter = [
    "jupyterlab~=4.3.6",
    "notebook~=7.3.3",
]
llm = [
    "anthropic~=0.42.0",
    "google-generativeai~=0.8.3",
    "openai~=1.59.0",
    "python-dotenv~=1.0.1",
]

[tool.uv.workspace]
members = [
]
